k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fruitfulplanet
  labels:
    name: fruitfulplanet
    environment: production
